tests/invalid/depth09.h
#include "depth10.h"
